--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
     "@babel/plugin-transform-runtime": "7.2.0",
     "@babel/register": "7.0.0",
     "@travi/any": "1.8.4",
-    "@travi/babel-preset": "3.0.0",
+    "@travi/babel-preset": "3.0.18",
     "@travi/eslint-config-travi": "^1.6.18",
     "assets-webpack-plugin": "4.0.0",
     "babel-loader": "8.0.4",
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-transform-react-remove-prop-types": "0.4.16",
     "babel-polyfill": "6.26.0",
-    "ban-sensitive-files": "1.9.2",
+    "ban-sensitive-files": "1.9.7",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "1.0.0",
-    "commitlint-config-travi": "1.2.31",
+    "commitlint-config-travi": "1.3.6",
     "component-emitter": "1.2.1",
     "component-type": "1.2.1",
     "css-loader": "0.28.11",
@@ -55,7 +55,7 @@
     "img-loader": "3.0.1",
     "jsdom": "13.0.0",
     "lodash-webpack-plugin": "0.11.5",
-    "markdownlint-cli": "0.13.0",
+    "markdownlint-cli": "0.22.0",
     "mocha": "5.2.0",
     "mq-polyfill": "1.1.8",
     "mustache-loader": "1.4.1",
@@ -70,14 +70,14 @@
     "url-loader": "1.1.2",
     "webpack": "3.11.0",
     "webpack-config-utils": "2.3.1",
-    "webpack-dev-server": "^2.11.3",
+    "webpack-dev-server": "2.11.5",
     "webpack-hot-middleware": "2.24.1",
     "webpack-visualizer-plugin": "0.1.11"
   },
   "dependencies": {
     "normalize.css": "8.0.1",
     "react": "16.4.1",
-    "react-dom": "16.4.1",
+    "react-dom": "16.13.1",
     "react-emojione": "5.0.1",
     "react-typist": "2.0.4",
     "spectacle": "3.0.0",
